--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/_ListAvailableAttributeForBonus.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/_ListAvailableAttributeForBonus.cshtml
@@ -2,12 +2,12 @@
 
 @{ Layout = null;}
 
-<div style="overflow-y: auto; max-height: 250px;">
+@*<div style="overflow-y: auto; max-height: 400px;">*@
     <table class="table table-bordered" id="TableBonus">
         <thead>
             <tr>
-                <th style="display: none;"></th>
-                <th colspan="2">Attribute</th>
+                <th>Attributes</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -36,4 +36,4 @@
             }
         </tbody>
     </table>
-</div>
+@*</div>*@
