--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Edit.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Edit.cshtml
@@ -8,72 +8,68 @@
     @Styles.Render("~/bundles/Sprite/Acoes")
 }
 
-<section class="fullheight page-attribute">
+
+<section id="slider" class="fullheight page-attribute">
     <h3 class="animated wow fadeInUp" data-wow-delay="0.2s">
         <i class="sprite sprite-Edit-Item animated wow fadeInDown div-icon"></i>
         &nbsp;Edit Attribute&nbsp;@Html.Raw(Model.AttributeName)
     </h3>
-    <div class="form-horizontal">
-        <hr />
-        <div id="MessageSummary">
-            @Html.Partial("_MessageSummary")
-        </div>
+    <hr />
+    <div id="MessageSummary">
+        @Html.Partial("_MessageSummary")
+    </div>
+    <div class="col-md-7">
         @Html.HiddenFor(model => model.AttributeId)
-
         <div class="form-group">
-            @Html.LabelFor(model => model.AttributeName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
+            @Html.LabelFor(model => model.AttributeName, htmlAttributes: new { @class = "control-label col-md-3" })
+            <div class="col-md-9">
                 @Html.EditorFor(model => model.AttributeName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AttributeName, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AttributeDescription, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
+            @Html.LabelFor(model => model.AttributeDescription, htmlAttributes: new { @class = "control-label col-md-3" })
+            <div class="col-md-9">
                 @Html.EditorFor(model => model.AttributeDescription, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AttributeDescription, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AttributeType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
+            @Html.LabelFor(model => model.AttributeType, htmlAttributes: new { @class = "control-label col-md-3" })
+            <div class="col-md-9">
                 @Html.EnumDropDownListFor(model => model.AttributeType, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.AttributeType, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group" id="div-minimum">
-            @Html.LabelFor(model => model.AttributeMinimum, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
+            @Html.LabelFor(model => model.AttributeMinimum, htmlAttributes: new { @class = "control-label col-md-3" })
+            <div class="col-md-9">
                 @Html.EditorFor(model => model.AttributeMinimum, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AttributeMinimum, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <label class="control-label col-md-2">Bonus To:</label>
-            <div class="col-md-4">
-                @{Html.RenderPartial("_ListAvailableAttributeForBonus", Model.AttributeBonus);}
+            <div class="col-md-offset-3 col-md-9">
+                <a href="~/Attribute" title="List" class="button btn btn-default">List</a>
+                <input type="button" name="SaveAttribute" value="Save" class="btn btn-success" />
             </div>
         </div>
-
-
+    </div>
+    <div class="col-md-5">
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <a href="~/Attribute" title="List">
-                    <span class="sprite sprite-List-Item animated wow fadeInDown div-icon"></span>
-                    &nbsp;<span>List</span>
-                </a> |
-                <input type="button" name="SaveAttribute" value="Save" class="btn btn-success" />
+            <label class="control-label col-md-2">Bonus To:</label>
+            <div class="col-md-10">
+                @{Html.RenderPartial("_ListAvailableAttributeForBonus", Model.AttributeBonus);}
             </div>
         </div>
     </div>
 </section>
 
 @section Scripts {
-    @Scripts.Render("~/Scripts/Attribute.js")
     @Scripts.Render("~/bundles/dataTables")
     <script type="text/javascript">
 
@@ -106,4 +102,5 @@
         InitTable();
 
     </script>
+    @Scripts.Render("~/Scripts/Attribute.js")
 }
