--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Campaign/Edit.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Campaign/Edit.cshtml
@@ -8,51 +8,34 @@
     @Styles.Render("~/bundles/Sprite/Acoes")
 }
 
-<section class="fullheight page-campaign">
+<section id="slider" class="fullheight page-campaign">
     <h3 class="animated wow fadeInUp" data-wow-delay="0.2s">
         <i class="sprite sprite-Edit-Item animated wow fadeInDown div-icon"></i>
         &nbsp;Edit&nbsp;@Html.Raw(Model.CampaignName)
     </h3>
-    <div class="form-horizontal">
-        <hr />
-        <div id="MessageSummary">
-            @Html.Partial("_MessageSummary")
-        </div>
+
+    <hr />
+    <div id="MessageSummary">
+        @Html.Partial("_MessageSummary")
+    </div>
+    <div class="col-md-6">
         @Html.HiddenFor(model => model.CampaignId)
 
         <div class="form-group">
             @Html.LabelFor(model => model.CampaignName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
+            <div class="col-md-10">
                 @Html.EditorFor(model => model.CampaignName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CampaignName, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CampaignShortDescription, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.CampaignShortDescription, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CampaignShortDescription, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CampaignBriefing, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.CampaignBriefing, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CampaignBriefing, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
+        <div class="form-group col-md-12">
             @Html.LabelFor(model => model.CampaignStartYear, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-4">
                 @Html.EditorFor(model => model.CampaignStartYear, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CampaignStartYear, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group">
             @Html.LabelFor(model => model.CampaignMaxPlayers, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-4">
                 @Html.EditorFor(model => model.CampaignMaxPlayers, new { htmlAttributes = new { @class = "form-control" } })
@@ -60,26 +43,57 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CampaignImg, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
+        <div class="form-group col-md-12">
+            @Html.LabelFor(model => model.CampaignImg, htmlAttributes: new { @class = "control-label col-md-4" })
+            <div class="col-md-10">
                 @Html.EditorFor(model => model.CampaignImg, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CampaignImg, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group col-md-12">
             @Html.LabelFor(model => model.CampaignStatus, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
+            <div class="col-md-10">
                 @Html.EnumDropDownListFor(model => model.CampaignStatus, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CampaignStatus, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-4">
+            <div class="col-md-offset-2 col-md-10">
                 <a href="~/Campaign" title="List" class="button btn btn-default">List</a>
                 <input type="button" name="SaveCampaign" value="Save" class="btn btn-success" />
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="form-group">
+            @Html.LabelFor(model => model.CampaignShortDescription, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10 fancy-form">
+                @Html.TextAreaFor(model => model.CampaignShortDescription, new { @rows = "5", @maxlength = "200", @class = "form-control word-count" })
+                <i style="padding-left:10px;" class="fa fa-comments"><!-- icon --></i>
+                <span class="fancy-hint size-11 text-muted">
+                    <strong>Hint:</strong> 200 words allowed!
+                    <span class="pull-right">
+                        <span id="textarea-words-info">0/200</span> Words
+                    </span>
+                </span>
+                @Html.ValidationMessageFor(model => model.CampaignShortDescription, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.CampaignBriefing, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10 fancy-form">
+                @Html.TextAreaFor(model => model.CampaignBriefing, new { @rows = "5", @maxlength = "1000", @class = "form-control word-count" })
+                <i style="padding-left:10px;" class="fa fa-comments"><!-- icon --></i>
+                <span class="fancy-hint size-11 text-muted">
+                    <strong>Hint:</strong> 1000 words allowed!
+                    <span class="pull-right">
+                        <span id="textarea-words-info">0/200</span> Words
+                    </span>
+                </span>
+                @Html.ValidationMessageFor(model => model.CampaignBriefing, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
