--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Player/_PlayerSheetAttributes.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Player/_PlayerSheetAttributes.cshtml
@@ -2,7 +2,7 @@
 
 @if (Model.ToList().Count > 0)
 {
-    <table class="table table-responsive mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+    <table class="table table-bordered" id="TableAttribute">
         <thead>
             <tr>
                 <th class="small">
