--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/PlayerItem/_Create.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/PlayerItem/_Create.cshtml
@@ -2,74 +2,52 @@
 
 @{Layout = null;}
 
-<div class="form-group col-md-12">
-    <div class="col-md-1 float-right">
+<div class="form-group col-md-2 col-md-offset-10">
+    <div class="col-md-6">
         <label class="control-label small" id="label-total-invested"><b>Total Invested:</b></label>
         <input type="number" id="input-total-invested" class="form-control small" readonly="readonly" />
     </div>
-    <div class="col-md-1 float-right">
+    <div class="col-md-6">
         <label class="control-label small"><b>Total Money:</b></label>
         <input type="number" id="input-total-money" class="form-control small" readonly="readonly" />
     </div>
 </div>
 
 <div class="col-md-8">
-    <div class="form-group col-md-12">
-        <h4>List of available items</h4>
-        <select class="form-control">
-            <option selected="selected"></option>
-            <option>Weapons</option>
-            <option>Shields</option>
-            <option>Clothes</option>
-            <option>Misc</option>
-        </select>
-        <input type="text" class="form-control col-md-12" placeholder="Search" id="SearchAvailable" />
-    </div>
-    <div class="col-md-12" style="height:400px;overflow-y:auto;">
-        <table class="table table-responsive mdl-data-table mdl-js-data-table mdl-shadow--2dp" id="table-item-available">
-            <thead>
-                <tr>
-                    <th>Item</th>
-                    <th colspan="2">Effect</th>
-                    <th>Price</th>
-                    <th>Qtd</th>
-                    <th>Total</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model.ListAvailableItems)
+    <h4>Available items</h4>
+    <table class="table table-bordered" id="table-item-available">
+        <thead>
+            <tr>
+                <th>Item</th>
+                <th>Effect</th>
+                <th>Price</th>
+                <th>Qtd</th>
+                <th>Total</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.ListAvailableItems)
             {
-                    <tr>
-                        <td class="TdItemName">@Html.DisplayFor(m => item.ItemName)</td>
-                        <td colspan="2">@Html.DisplayFor(m => item.ItemEffect)</td>
-                        <td class="TdItemPrice">
-                            @Html.TextBoxFor(m => item.ItemPrice, new { @readonly = "readonly", @class = "form-control textbox-small" })
-                        </td>
-                        <td class="TdItemQtd"><input type="number" class="form-control textbox-small" name="ItemQtd" min="0" placeholder="0" /></td>
-                        <td class="TdItemTotal"><input type="number" class="form-control textbox-small" name="ItemTotal" readonly="readonly" /></td>
-                        <td>
-                            <input id="@Html.Raw(item.ItemId)" type="button" class="btnIncludeItem btn btn-success" value=" + " />
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
+            <tr>
+                <td class="TdItemName">@Html.DisplayFor(m => item.ItemName)</td>
+                <td>@Html.DisplayFor(m => item.ItemEffect)</td>
+                <td class="TdItemPrice">
+                    @Html.TextBoxFor(m => item.ItemPrice, new { @readonly = "readonly", @class = "form-control textbox-small" })
+                </td>
+                <td class="TdItemQtd"><input type="number" class="form-control textbox-small" name="ItemQtd" min="0" placeholder="0" /></td>
+                <td class="TdItemTotal"><input type="number" class="form-control textbox-small" name="ItemTotal" readonly="readonly" /></td>
+                <td>
+                    <input id="@Html.Raw(item.ItemId)" type="button" class="btnIncludeItem btn btn-success" value=" + " />
+                </td>
+            </tr>
+            }
+        </tbody>
+    </table>
 </div>
-<div class="col-md-4" style="height:400px;overflow-y:auto;">
-    <div class="form-group col-md-12">
-        <h4>Selected Items</h4>
-        <select class="form-control">
-            <option selected="selected"></option>
-            <option>Weapons</option>
-            <option>Shields</option>
-            <option>Clothes</option>
-            <option>Misc</option>
-        </select>
-        <input type="text" class="form-control col-md-12" placeholder="Search" id="SearchSelected" />
-    </div>
-    <table class="table table-responsive mdl-data-table mdl-js-data-table mdl-shadow--2dp" id="table-item-selected">
+<div class="col-md-4">
+    <h4>Selected Items</h4>
+    <table class="table table-borderd" id="table-item-selected">
         <thead>
             <tr>
                 <th>Item</th>
